# emergency-centre

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml
civic_beacon/: __init__.py  app.py  main_window.py  models.py  seed.py
docs/: api-reference.md  architecture.md  developer-guide.md  feature-reference.md  feed-schema.md  security-model.md
resilience_hub/: __init__.py  app.py  controller.py  main_window.py  theme.py
server/: index.ts
server/services/: briefingSnapshotStore.ts  demoBriefingService.ts  liveBriefingService.ts  providerCache.ts
server/services/providers/: environmentAgencyProvider.ts  metOfficeProvider.ts  nwsProvider.ts  shared.ts  usgsProvider.ts
src/: App.tsx  types.ts
src/components/: AlertFeed.tsx  LocationConsole.tsx  OverviewPanel.tsx  SetupPanel.tsx  SituationPanels.tsx
src/data/: coverageCatalogData.ts
src/lib/: alertSync.ts  briefing.ts  coverageCatalog.ts  feed.ts  notifications.ts  setup.ts
tests/: providerParsers.test.ts
tests/fixtures/: environment-agency-floods.json  met-office-forecast.html  met-office-warnings.xml  nws-alerts.json  nws-forecast.json  usgs-earthquakes.json
wiki/: API-Services.md  Changelog.md  Connect-Real-Feeds.md  Coverage-Zones.md  FAQ.md  Home.md  Quick-Start.md  Security-Model.md  Self-Hosting.md  _Sidebar.md
