[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "civic-beacon"
version = "0.1.0"
description = "Civic Beacon is an open-source community resilience platform with a PyQt desktop interface."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "ninezel" }
]
dependencies = [
  "PyQt6>=6.7,<7"
]

[project.urls]
Homepage = "https://ko-fi.com/ninezel"
Funding = "https://ko-fi.com/ninezel"

[project.scripts]
civic-beacon = "civic_beacon.app:main"

[tool.setuptools]
packages = ["civic_beacon"]
